<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.coverlabs.movietime.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.coverlabs.movietime.ui.fragment.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_home"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_genre"
        android:name="com.coverlabs.movietime.ui.fragment.GenreListFragment"
        android:label="@string/title_genre"
        tools:layout="@layout/fragment_genre" >
        <action
            android:id="@+id/action_navigation_genre_to_navigation_home"
            app:popUpTo="@id/navigation_home" />
    </fragment>
</navigation>