<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.fragment.HomeFragment">

    <TextView
        android:id="@+id/tvTopFiveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/home_top_five_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpTopFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_default"
        android:animateLayoutChanges="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingStart="@dimen/margin_xlarge"
        android:paddingEnd="@dimen/margin_xlarge"
        app:layout_constraintBottom_toTopOf="@id/glFavorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTopFiveTitle" />

    <TextView
        android:id="@+id/tvFavoritesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/home_favorites_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glFavorites" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFavoritesTitle"
        tools:itemCount="2"
        tools:listitem="@layout/item_movie" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNoFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFavoritesTitle"
        app:srcCompat="@drawable/ic_sad" />

    <TextView
        android:id="@+id/tvNoFavorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_default"
        android:text="@string/home_no_favorites_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivNoFavorite"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glFavorites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gpNoFavorite"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="ivNoFavorite,tvNoFavorite" />
</androidx.constraintlayout.widget.ConstraintLayout>